# mergetrain

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  design-qa.md  llms-full.txt  llms.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  demo-gif.yml  release.yml  test-release.yml
dashboard/: AGENTS.md  index.html  package-lock.json  package.json  vite.config.mjs
dashboard/design/audit-hub-card-info/: audit.md
dashboard/design/audit-status-clarity/: audit.md
dashboard/scripts/: generate-favicon.mjs
dashboard/src/: App.jsx  dashboardLogic.js  main.jsx  styles.css
dashboard/test/: dashboardLogic.test.mjs
docs/: adapter-pattern.md  agent-contract.md  cli.md  config.md  contract.md  daemon.md  demo.tape  design.md  development.md  failure-modes.md  hub.md  install.md  mobile.md  pr-workflows.md  quickstart.md  release.md  security.md
docs/images/: mergetrain-explainer.html
docs/proposals/: 0.3.0-recovery.md  0.4.x-contract.md
examples/: example.mergetrain.yaml  example.trainyard.yaml  mergetrain.agent.yaml  trainyard.agent.yaml
integrations/generic/scripts/: local_ci.py
scripts/: check_release.py  e2e.sh  mt-deploy.sh  mt-status.sh  mt-validate.sh  ty-deploy.sh  ty-status.sh  ty-validate.sh
src/mergetrain/: __init__.py  cli.py  config.py  contract.py  daemon.py  dashboard.py  demo.py  errors.py  git_runner.py  hub.py  hub_daemon.py  models.py  notify.py  observability.py  recovery.py  registry.py  reuse.py  runtime.py  snapshot.py  store.py
src/mergetrain/dashboard_dist/: index.html
src/mergetrain/dashboard_dist/assets/: index-1-Gyj6T_.js  index-As4yp6mR.js  index-B55zzUrf.css  index-BJGVtEAo.css  index-BKsW0WDL.js  index-BOsDUqGr.js  index-BPHgXNFQ.css  index-BdG0zSWB.js  index-BljWomtV.js  index-BrWtzZH8.css  index-BrfRToqi.js  index-BuojSOrz.css  index-CAs5q8AM.js  index-CJ2sqSxg.css  index-CSwCej7U.js  index-CXOAw5Uf.css  index-CZ4vcb0w.js  index-CZVc3RwD.js  index-ClfSeLbB.css  index-CoqCT8yB.js  index-CvG19LUC.js  index-D4zTHPM2.js  index-DAgrqrvW.css  index-DFnpMVHd.css  index-DTsv8Zbu.js  index-DjpRSaDn.css  index-DzVQS0Cm.css  index-HbaWD2i2.js  index-PZSEtAp2.js  index-TyDmvOEU.js  index-ZPTjLE3M.css  index-bOOy9hwT.js  index-dvMrfMz1.css  index-pTu2TAZb.js  index-vwiXWCGN.css  index-xMyaU2iS.css
src/trainyard/: __init__.py  cli.py  config.py  daemon.py  errors.py  git_runner.py  models.py  store.py
tests/: contract_fingerprints.json  test_cli.py  test_config.py  test_contract_fingerprints.py  test_daemon.py  test_dashboard.py  test_demo.py  test_git_runner.py  test_hub.py  test_hub_daemon.py  test_notify.py  test_observability.py  test_reconcile.py  test_registry.py  test_reuse.py  test_runtime.py  test_snapshot.py  test_store.py
