[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mergetrain"
version = "0.1.0"
description = "LLM-friendly local deploy train for coding-agent worktrees"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "mergetrain contributors" }
]
keywords = ["llm", "ai-agent", "git", "deploy", "merge-train", "sqlite", "worktree"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = ["build>=1.0", "hatchling>=1.21", "PyYAML>=6.0", "pytest>=7"]

[project.scripts]
mergetrain = "mergetrain.cli:main"

[project.urls]
Homepage = "https://github.com/yongjip/mergetrain"
Documentation = "https://github.com/yongjip/mergetrain/tree/main/docs"
Issues = "https://github.com/yongjip/mergetrain/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mergetrain"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/AGENTS.md",
  "/llms.txt",
  "/llms-full.txt",
]
