[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "mergetrain"
version = "0.8.1"
description = "A local-first merge-and-push queue for coding-agent worktrees"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "mergetrain contributors" }
]
keywords = ["llm", "ai-agent", "git", "deploy", "merge-train", "sqlite", "worktree"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
dev = [
  "build>=1.0",
  "hatchling>=1.21",
  "PyYAML>=6.0",
  "pytest>=7",
  "pytest-cov>=4",
  "ruff>=0.6",
  "mypy>=1.11",
]

[project.scripts]
mergetrain = "mergetrain.cli:main"

[project.urls]
Homepage = "https://github.com/yongjip/mergetrain"
Documentation = "https://github.com/yongjip/mergetrain/tree/main/docs"
Issues = "https://github.com/yongjip/mergetrain/issues"
Changelog = "https://github.com/yongjip/mergetrain/blob/main/CHANGELOG.md"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# High-signal rules for a first adoption. E501 (line length) is intentionally
# not gated yet — that is a formatting concern for a later `ruff format` pass,
# not a correctness gate.
select = ["E", "W", "F", "I", "B", "UP", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Test modules define filesystem/skip helpers before importing the package.
"tests/**" = ["E402"]

[tool.mypy]
python_version = "3.10"
files = ["src/mergetrain"]
ignore_missing_imports = true
# First adoption: lenient (no strict-mode annotation requirements). Tighten
# incrementally as modules gain full annotations.

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/mergetrain"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/docs",
  "/dashboard",
  "/examples",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/AGENTS.md",
  "/llms.txt",
  "/llms-full.txt",
]
